# heimdall

./: LICENSE  README.md  environment.yml
angr_ebpf_backend/: setup.py
angr_ebpf_backend/angr_ebpf/: arch_ebpf.py  instrs_ebpf.py  lift_ebpf.py  load_ebpf.py  simos_ebpf.py
c2rust_translation/: AGENTS.md  agent_code_translate.sh  aya_doc_extractor.py  btf_parser.py  build.py  counter_example_formatter.py  error_analysis.py  generate_formula.py  llm_client.py  prompts.py  run_log.py  run_translation.py  run_translation_commands.txt  safety_check.py  safety_policy.py  verify_ebpf_kernel.py  verify_equivalence.py  verify_mixed_entries.py
c2rust_translation/aya-ebpf/: Cargo.toml
c2rust_translation/aya-ebpf-agent/: Cargo.toml  bpfel-unknown-none-atomic.json
c2rust_translation/aya-ebpf-agent/src/: main.rs
c2rust_translation/aya-ebpf/src/: main.rs
c2rust_translation/c_bpf_programs/libbpf-tools/: bashreadline.bpf.c  biopattern.bpf.c  biostacks.bpf.c  biotop.bpf.c  bitesize.bpf.c  cachestat.bpf.c  drsnoop.bpf.c  filelife.bpf.c  filetop.bpf.c  fsdist.bpf.c  fsslower.bpf.c  futexctn.bpf.c  gethostlatency.bpf.c  javagc.bpf.c  klockstat.bpf.c  ksnoop.bpf.c  llcstat.bpf.c  mdflush.bpf.c  memleak.bpf.c  mountsnoop.bpf.c  numamove.bpf.c  offcputime.bpf.c  oomkill.bpf.c  opensnoop.bpf.c  profile.bpf.c  readahead.bpf.c  runqlen.bpf.c  runqslower.bpf.c  sigsnoop.bpf.c  slabratetop.bpf.c  softirqs.bpf.c  solisten.bpf.c  statsnoop.bpf.c  syncsnoop.bpf.c  tcpconnect.bpf.c  tcpconnlat.bpf.c  tcpktlat.bpf.c  tcplife.bpf.c  tcprtt.bpf.c  tcpstates.bpf.c  (+4 more)
(+115 files in other folders)
